--- a/style.css
+++ b/style.css
@@ -53,21 +53,51 @@
   bottom: 0;
   right: 0;
   padding: 0.75em;
+  font-weight: 100;
 
   display: grid;
-  gap: 1em;
+  row-gap: 1em;
+  column-gap: 4em;
   grid-template-columns: auto 1fr;
+}
+
+#weather-glimpse,
+#weather-full {
+  font-weight: normal;
 }
 
 #bottom #info #feastday {
   grid-column: 1 / 3;
   text-align: center;
+  font-weight: normal;
 }
 
-#time, #temperature {
-  font-size: 200%;
+#timeinfo {
+  display: grid;
+  gap: 0.25em;
+}
+
+#feastday,
+#day {
+  font-size: 120%;
+}
+
+#temprow {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: start;
+}
+
+#weather-icon {
+  height: 55px;
+}
+
+#time,
+#temperature {
+  font-size: 300%;
 }
 
 #date {
-  font-size: 150%;
+  font-size: 200%;
 }
