--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  padding: 0.75em;
+  padding: 0.75em 1em 1em;
   font-weight: 100;
 
   display: grid;
@@ -69,7 +69,7 @@
 #bottom #info #feastday {
   grid-column: 1 / 3;
   text-align: center;
-  font-weight: normal;
+  margin: 0 2em;
 }
 
 #timeinfo {
@@ -80,6 +80,7 @@
 #feastday,
 #day {
   font-size: 120%;
+  font-weight: normal;
 }
 
 #temprow {
@@ -87,6 +88,7 @@
   grid-auto-flow: column;
   align-items: center;
   justify-content: start;
+  margin-bottom: 0.25em;
 }
 
 #weather-icon {
